fix header spacing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -39,7 +39,7 @@ header {
 
 .dateTimeWeather_container {
     padding: .5%;
-    padding-top: 5pt;
+    padding-top: 8pt;
     margin-top: 0%;
     padding-bottom: 0%;
     margin-bottom: 0%;
